nimbus/src/snapshots/nimbus__tests__t0-2.snap
---
source: nimbus/src/lib.rs
expression: select
---
SelectResult(
    [
        [
            String(
                "'abc'",
            ),
            Numeric(
                "2",
            ),
        ],
        [
            String(
                "'def'",
            ),
            Numeric(
                "3",
            ),
        ],
    ],
)
